# pyapisim

./: .dockerignore  .env.example  .env.sample  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
mockserver/: admin.py  admin_views.py  apps.py  forms.py  permissions.py  urls.py  views.py
mockserver/migrations/: 0001_initial.py  0002_add_sharedcollection_unique_constraint.py
mockserver/models/: __init__.py  collections.py  endpoint.py  shared_collection.py
mockserver/templates/admin/mockserver/collection/: delete_confirmation.html  duplicate.html
mockserver/templates/admin/mockserver/endpoint/: change_form.html  duplicate.html
pyapisim/: asgi.py  settings.py  urls.py  wsgi.py
