[project]
name = "pyapisim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-unfold>=0.97.1",
    "djangorestframework>=3.17.1",
]

[dependency-groups]
dev = [
    "pyclean>=3.7.0",
    "ruff>=0.15.17",
]
